avance en agregar vista de retícula

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
   <section>
     <h1>Contenidos Locales</h1>
     <div class="example-button-row">
-      <a mat-flat-button href="/" target="_self">Explorar</a>
+      <button mat-flat-button routerLink="/explorar">Explorar</button>
     </div>
+  </section>
+  <section>
+    <app-grid-list></app-grid-list>
   </section>
 </main>
