--- a/src/app/grid-list/grid-list.component.html
+++ b/src/app/grid-list/grid-list.component.html
@@ -1,1 +1,6 @@
-<p>grid-list works!</p>
+<h1>Explorar</h1>
+<mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile *ngFor="let tile of tiles" [colspan]="tile.cols" [rowspan]="tile.rows" [style.background]="tile.color">
+      {{tile.text}}
+    </mat-grid-tile>
+</mat-grid-list>
