hasta acá renderiza las cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
 <main>
   <section>
-    <h1>Contenidos Locales</h1>
-    <div class="example-button-row">
-      <button mat-flat-button routerLink="/explorar">Explorar</button>
-    </div>
-  </section>
-  <section>
-    <app-grid-list></app-grid-list>
+    <grid-list></grid-list>
   </section>
 </main>
