--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,5 @@
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    background-color: #f5f5f5;
+.content-container {
+  background-color: #f5f5f5;
+  display: block;
+  width: 100%;
 }
