--- a/src/app/grid-list/grid-list.component.html
+++ b/src/app/grid-list/grid-list.component.html
@@ -1,21 +1,19 @@
-<mat-grid-list cols="2">
-  <mat-grid-tile *ngFor="let tile of tiles">
-    <mat-card class="example-card" appearance="outlined">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image" [style.background]="tile.color"></div>
-        <mat-card-title>{{tile.text}}</mat-card-title>
-        <mat-card-subtitle>{{tile.subtitle}}</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image [src]="tile.img" alt="Photo of {{tile.text}}">
-      <mat-card-content>
-        <p>
-          {{tile.description}}
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="card-container">
+  <mat-card class="card-content" appearance="outlined" *ngFor="let tile of tiles">
+    <mat-card-header>
+      <div mat-card-avatar class="header-image" [style.background]="tile.color"></div>
+      <mat-card-title>{{tile.text}}</mat-card-title>
+      <mat-card-subtitle>{{tile.subtitle}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="tile.img" alt="Photo of {{tile.text}}">
+    <mat-card-content>
+      <p>
+        {{tile.description}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
