--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,32 @@
+main {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
+}
 .content-container {
   background-color: #f5f5f5;
   display: block;
   width: 100%;
+}
+section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+section > div {
+  flex: 1 0 33.33%;
+  margin: 10px;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+}
+
+mat-divider {
+  width: 100%;
+  padding: 10px;
 }
