--- a/src/app/grid-list/grid-list.component.css
+++ b/src/app/grid-list/grid-list.component.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 10px;
+  gap: 20px;
 }
 
 .card-content {
@@ -11,6 +11,11 @@
   max-width: 30%;
   box-sizing: border-box;
   padding: 10px;
+}
+.card-content img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 @media (max-width: 768px) {
