--- a/src/app/grid-list/grid-list.component.html
+++ b/src/app/grid-list/grid-list.component.html
@@ -2,19 +2,17 @@
   <div class="card-container">
     <mat-card class="card-content" appearance="outlined" *ngFor="let tile of tiles">
       <mat-card-header>
-        <div mat-card-avatar class="header-image" [style.background]="tile.color"></div>
-        <mat-card-title>{{tile.text}}</mat-card-title>
+        <mat-card-title>{{tile.titulo}}</mat-card-title>
         <mat-card-subtitle>{{tile.subtitle}}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image [src]="tile.img" alt="Photo of {{tile.text}}">
+      <img mat-card-image [src]="imgPath + tile.imagen + '?' + token" [alt]="'Imagen decorativa id: ' + tile.ID ">
       <mat-card-content>
         <p>
-          {{tile.description}}
+          {{tile.descripcion | slice:0:100}}...
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
+        <button mat-button>VER</button>
       </mat-card-actions>
     </mat-card>
   </div>
