--- a/src/app/grid-list/grid-list.component.html
+++ b/src/app/grid-list/grid-list.component.html
@@ -5,14 +5,14 @@
         <mat-card-title>{{tile.titulo}}</mat-card-title>
         <mat-card-subtitle>{{tile.subtitle}}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image [src]="imgPath + tile.imagen + '?' + token" [alt]="'Imagen decorativa id: ' + tile.ID ">
+      <img mat-card-image [src]="blobPath + tile.imagen + '?' + token" [alt]="'Imagen decorativa id: ' + tile.ID ">
       <mat-card-content>
         <p>
-          {{tile.descripcion | slice:0:100}}...
+          {{tile.descripcion | slice:0:100}}…
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>VER</button>
+        <button mat-button [routerLink]="['/detalle', tile.ID]">VER</button>
       </mat-card-actions>
     </mat-card>
   </div>
